--- a/source/_posts/training/2021.md
+++ b/source/_posts/training/2021.md
@@ -2,7 +2,8 @@
 date: 2019-04-30 18:15:01
 title: "2021年华中农大-帝国理工“计算社会科学方法论” 暑期学校招生简章"
 categories:
-- [training]
+- [training, 2021]
+_categoryParent: training
 ---
 
 计算社会科学是计算机技术与大数据分析在社会科学中应用而形成的一个新型领域，是大数据和智能时代中社会科学研究发展的一个重要方向，尤其在经济学和管理学领域获得了广泛应用。在对新冠肺炎疫情的研究和治理中，计算机仿真、复杂网络分析等计算社会科学方法发挥了突出作用，而对这些方法的深入掌握往往成为研究者进入该领域一道难以逾越的门槛。
