--- a/source/_posts/events/ISSS2020.md
+++ b/source/_posts/events/ISSS2020.md
@@ -2,7 +2,7 @@
 date: 2020-01-30 18:15:01
 title: "International Symposium on Social Simulation 2020"
 categories:
-- [events]
+- [events, 2020]
 ---
 
 <h3 class="_excerpt_ignore">International Symposium on Social Simulation 2020</h3>
