--- a/source/_posts/training/2019.md
+++ b/source/_posts/training/2019.md
@@ -2,7 +2,7 @@
 date: 2019-04-30 18:15:01
 title: "MARI举办2019华中农业大学-帝国理工大学“计算社会科学方法论”暑期学校"
 categories:
-- [training, 2019]
+- [training, hzny, 2019]
 ---
 
 
