--- a/source/_posts/training/2020.md
+++ b/source/_posts/training/2020.md
@@ -2,7 +2,7 @@
 date: 2019-04-30 18:15:01
 title: "2020年华中农大-帝国理工“计算社会科学方法论” 暑期学校招生简章"
 categories:
-- [training, 2020]
+- [training, hzny, 2020]
 ---
 
 
