[fix]调整预览图

--- a/source/_posts/events/csu/csu2019.md
+++ b/source/_posts/events/csu/csu2019.md
@@ -3,7 +3,7 @@ date: 2019-04-10 16:15:01
 title: "首届中国社会物理学论坛暨第二届中国计算社会科学论坛成功举行"
 categories:
 - [events, csu, 2019]
-thumbnail_in_body: https://news.csu.edu.cn/__local/5/8E/A3/7841CAB4A4E71CAF068B76A1825_4889FF0C_1B2205.jpg?e=.jpg
+thumbnail_in_body: http://mari.hzau.edu.cn/__local/F/06/E6/2475621FC8351150E3110203005_D1C07F94_75A26.png
 ---
 ### <div class="post_flex_center_center">首届中国社会物理学论坛暨第二届中国计算社会科学论坛成功举行</div>
 11月22日，首届中国社会物理学论坛暨第二届中国计算社会科学论坛，在中那大学物理与电子学院举行。本次论坛由公管院社会学系吕鹏教授发起，邀请中国科学院刘怡君教授（联合发起人）团队、北京航空航天大学计算机学院许可教授、清华大学建设管理系李楠副教授、沃民高新科技（北京）股份公司齐中祥董事长等专家学者做主题演讲。
