--- a/source/_posts/trainings/CSS/CSS2019.md
+++ b/source/_posts/trainings/CSS/CSS2019.md
@@ -2,7 +2,7 @@
 date: 2019-04-10 15:15:01
 title: "2019年“计算社会科学方法论” 暑期学校"
 categories:
-- [training, CSS, 2019]
+- [trainings, CSS, 2019]
 thumbnail_in_body: /img/css/summer_school_2019.jpg
 ---
 ## <div class="post_flex_center_center">2019年“计算社会科学方法论” 暑期学校</div>
