--- a/source/_posts/trainings/CSS/CSS2021.md
+++ b/source/_posts/trainings/CSS/CSS2021.md
@@ -2,7 +2,7 @@
 date: 2021-04-10 15:15:01
 title: "2021年“计算社会科学方法论” 暑期学校 "
 categories:
-- [training, CSS, 2021]
+- [trainings, CSS, 2021]
 thumbnail_in_body: /img/css/summer_school_2021.jpg
 ---
 ## <div class="post_flex_center_center">2021年“计算社会科学方法论” 暑期学校 </div>
