--- a/source/_posts/trainings/CSS/CSS2022.md
+++ b/source/_posts/trainings/CSS/CSS2022.md
@@ -2,7 +2,7 @@
 date: 2022-04-10 15:15:01
 title: "2022计算社会科学方法论冬季班"
 categories:
-- [training, CSS, 2022]
+- [trainings, CSS, 2022]
 thumbnail_in_body: /img/css/winter_school_2022.png
 ---
 ## <div class="post_flex_center_center">2022计算社会科学方法论冬季班</div>
