--- a/source/_posts/trainings/IAMO/IAMO2022.md
+++ b/source/_posts/trainings/IAMO/IAMO2022.md
@@ -2,7 +2,7 @@
 date: 2022-04-10 13:15:01
 title: "International IAMO-Alumni Summer School 2022 “Research and innovation for sustainable rural development"
 categories:
-- [training, IAMO, 2022]
+- [trainings, IAMO, 2022]
 thumbnail_in_body: /img/iamo/iamo_2022.jpg
 ---
 #### IAMO Forum 2022
