--- a/source/_posts/trainings/IAMO/IAMO2023.md
+++ b/source/_posts/trainings/IAMO/IAMO2023.md
@@ -2,7 +2,7 @@
 date: 2023-04-10 13:15:01
 title: "IAMO Forum 2023"
 categories:
-- [training, IAMO, 2023]
+- [trainings, IAMO, 2023]
 thumbnail_in_body: /img/iamo/iamo_2023.jpg
 ---
 #### IAMO Forum 2023
