[fix]trainings相关的标题改用英文

--- a/source/_posts/trainings/CSS/CSS2022.md
+++ b/source/_posts/trainings/CSS/CSS2022.md
@@ -1,6 +1,6 @@
 ---
 date: 2022-04-10 15:15:01
-title: "2022计算社会科学方法论冬季班"
+title: "2022 Winter School on Methodology of Computational Social Science"
 categories:
 - [trainings, CSS, 2022]
 thumbnail_in_body: /img/css/winter_school_2022.png
