--- a/source/_posts/trainings/CSS/CSS2023.md
+++ b/source/_posts/trainings/CSS/CSS2023.md
@@ -1,6 +1,6 @@
 ---
 date: 2023-04-10 15:15:01
-title: "2023年计算社会科学方法论” 暑期学校"
+title: "2023 Summer School on Methodology of Computational Social Science"
 categories:
 - [trainings, CSS, 2023]
 thumbnail_in_body: /img/css/summer_school_2023.jpg
