--- a/source/_posts/trainings/CSS/CSS2020.md
+++ b/source/_posts/trainings/CSS/CSS2020.md
@@ -1,6 +1,6 @@
 ---
 date: 2020-04-10 15:15:01
-title: "2020年“计算社会科学方法论” 暑期学校"
+title: "2020 Summer School on Methodology of Computational Social Science"
 categories:
 - [trainings, CSS, 2020]
 thumbnail_in_body: /img/css/summer_school_2020.png
