--- a/source/_posts/trainings/CSS/CSS2021.md
+++ b/source/_posts/trainings/CSS/CSS2021.md
@@ -1,6 +1,6 @@
 ---
 date: 2021-04-10 15:15:01
-title: "2021年“计算社会科学方法论” 暑期学校 "
+title: "2021 Summer School on Methodology of Computational Social Science"
 categories:
 - [trainings, CSS, 2021]
 thumbnail_in_body: /img/css/summer_school_2021.jpg
