--- a/source/_posts/events/ISSS/ISSS2020.md
+++ b/source/_posts/events/ISSS/ISSS2020.md
@@ -31,7 +31,7 @@ thumbnail_in_body: /img/isss/isss_2020.png
 
 **• Dr. Flaminio Squazzoni**
 
-<div class="post_flex_center_center">
+<div class="mdh-post_flex_center_center">
     <img style="width: 100px;margin-bottom: 16px;" src="http://mari.hzau.edu.cn/__local/7/47/F3/726E5D07318CC7106FE613A69FC_70DC80C5_6C180.png" />
 </div>
 
@@ -43,7 +43,7 @@ thumbnail_in_body: /img/isss/isss_2020.png
 
 • 熊航博士
 
-<div class="post_flex_center_center">
+<div class="mdh-post_flex_center_center">
     <img style="width: 100px;margin-bottom: 16px;" src="http://mari.hzau.edu.cn/__local/3/B4/E9/74E27A7D08B87C8B6A376936205_9C726473_4BEAA.png" />
 </div>
 
@@ -55,7 +55,7 @@ thumbnail_in_body: /img/isss/isss_2020.png
 
 • Dr. Georgiy Bobashev
 
-<div class="post_flex_center_center">
+<div class="mdh-post_flex_center_center">
     <img style="width: 100px;margin-bottom: 16px;" src="http://mari.hzau.edu.cn/__local/3/FD/F0/D11108EA8395CFD69D06B8E4649_32877B9B_51F0B.png" />
 </div>
 
@@ -68,7 +68,7 @@ thumbnail_in_body: /img/isss/isss_2020.png
 
 • Dr. Li An
 
-<div class="post_flex_center_center">
+<div class="mdh-post_flex_center_center">
     <img style="width: 100px;margin-bottom: 16px;" src="http://mari.hzau.edu.cn/__local/5/F6/ED/5EDC78CE83E221487B2F55DB1E9_2E461FB7_2AB77.png" />
 </div>
 
@@ -80,7 +80,7 @@ thumbnail_in_body: /img/isss/isss_2020.png
 
 • Dr. Wander Jager
 
-<div class="post_flex_center_center">
+<div class="mdh-post_flex_center_center">
     <img style="width: 100px;margin-bottom: 16px;" src="http://mari.hzau.edu.cn/__local/3/B4/E9/74E27A7D08B87C8B6A376936205_9C726473_4BEAA.png" />
 </div>
 
@@ -92,7 +92,7 @@ thumbnail_in_body: /img/isss/isss_2020.png
 
 • Dr. Koen H. van Dam
 
-<div class="post_flex_center_center">
+<div class="mdh-post_flex_center_center">
     <img style="width: 100px;margin-bottom: 16px;" src="http://mari.hzau.edu.cn/__local/7/39/24/BD0A4A3C407A25058216758D8BB_61AB06C6_E7B0.png" />
 </div>
 
