--- a/source/_posts/events/ISSS/ISSS2023.md
+++ b/source/_posts/events/ISSS/ISSS2023.md
@@ -6,7 +6,7 @@ categories:
 thumbnail_in_body: /img/isss/isss_2023.jpg
 banner: /img/isss/isss_2023.jpg
 ---
-<h3 class="post_flex_center_center _excerpt_ignore">International Symposium on Social Simulation 2023</h3>
+<h3 class="mdh-post_flex_center_center _excerpt_ignore">International Symposium on Social Simulation 2023</h3>
 
 Social simulation is increasingly used to investigate complex phenomena in social and economic systems. Its applicants in social sciences have been producing fruitful results. As today's world is changing at an accelerated rate, social simulation will play a more important role in addressing the complexities that challenge social scientists.
 International Symposium on Social Simulation (ISSS or IS³) aims to provide a platform faciliting the exchange and collaborations among researchers using social simulation as a modelling approach. The 2023 ISSS focuses on the theme "Simulating Complex Social Systems: Models, Methods and Applications". Scholars and students are welcome to share and discuss you latest research and observations in Wuhan, China.
@@ -81,7 +81,7 @@ PKU-WUHAN Institute for Artificial Intelligence
 China Simulation Federation on Agricultural Modelling and Simulation
 
 
-<h3 class="post_flex_center_center">社会仿真模拟国际研讨会2023</h3>
+<h3 class="mdh-post_flex_center_center">社会仿真模拟国际研讨会2023</h3>
 
 社会仿真模拟被日益广泛的应用于社会科学研究中，为研究经济社会系统中的复杂现象提供了有力的建模分析工具，并取得了丰硕的研究成果。对病毒传播机制的仿真帮助人们认识新冠肺炎疫情蔓延规律，对公共政策实施结果的仿真为碳排放政策的出台提供了事前评估，对国家竞合策略的仿真能够深化对王朝更迭和文明演化规律的解释。世界加速变化所带来的复杂性不断为社会科学研究提出新问题和新挑战，社会仿真建模方法将在复杂性社会经济问题的的研究中发挥前所未有的重要作用。
 社会仿真模拟国际研讨会(International Symposium on Social Simulation, ISSS或IS³)是目前唯一由我国机构发起主办的社会仿真主题国际学术会议，旨在为从事社会仿真模拟以及相关研究的国内外学者学生提供一个互动交流的平台，共同推动仿真研究范式在社会科学中的应用，首届ISSS于2020年线上进行。本届ISSS主题为“复杂社会系统仿真：模型、方法与应用”，期待各位学者相聚江城武汉南湖之畔，分享和探讨最新研究成果。
