--- a/source/_posts/trainings/CSS/CSS2022.md
+++ b/source/_posts/trainings/CSS/CSS2022.md
@@ -5,7 +5,7 @@ categories:
 - [trainings, CSS, 2022]
 thumbnail_in_body: /img/css/winter_school_2022.png
 ---
-## <div class="post_flex_center_center">2022计算社会科学方法论冬季班</div>
+## <div class="mdh-post_flex_center_center">2022计算社会科学方法论冬季班</div>
 
 计算机仿真建模是一种新兴的社会科学研究方法，可以用于研究计量经济学建模等方法难以刻画的复杂性经济社会现象，也能够利用便利地和大数据技术和人工智能方法相结合。以计算机仿真建模方法的运用为主要特征的计算社会科学是一门迅速发展的前沿交叉学科，也是信息时代和数智时代社会科学的一个重要发展趋势。
 <!-- more -->
