--- a/source/_posts/events/CSU/CSU2019.md
+++ b/source/_posts/events/CSU/CSU2019.md
@@ -5,11 +5,11 @@ categories:
 - [events, CSU, 2019]
 thumbnail_in_body: http://mari.hzau.edu.cn/__local/F/06/E6/2475621FC8351150E3110203005_D1C07F94_75A26.png
 ---
-### <div class="post_flex_center_center">首届中国社会物理学论坛暨第二届中国计算社会科学论坛成功举行</div>
+### <div class="mdh-post_flex_center_center">首届中国社会物理学论坛暨第二届中国计算社会科学论坛成功举行</div>
 11月22日，首届中国社会物理学论坛暨第二届中国计算社会科学论坛，在中那大学物理与电子学院举行。本次论坛由公管院社会学系吕鹏教授发起，邀请中国科学院刘怡君教授（联合发起人）团队、北京航空航天大学计算机学院许可教授、清华大学建设管理系李楠副教授、沃民高新科技（北京）股份公司齐中祥董事长等专家学者做主题演讲。
 
-<div class="post_flex_center_center">
-    <img class="post_block-item" src="https://news.csu.edu.cn/__local/5/8E/A3/7841CAB4A4E71CAF068B76A1825_4889FF0C_1B2205.jpg?e=.jpg"/>
+<div class="mdh-post_flex_center_center">
+    <img class="mdh-post_block-item" src="https://news.csu.edu.cn/__local/5/8E/A3/7841CAB4A4E71CAF068B76A1825_4889FF0C_1B2205.jpg?e=.jpg"/>
 </div>
 
 开幕式由吕鹏主持。公管院副院长许源源教授、中南大学科研部罗英姿副部长、公管院社会学学科带头人李斌教授、社会学系主任潘泽泉教授等先后做开幕致辞。与会领导与嘉宾高度肯定中南大学社会学发展成绩，并展望期许学科未来发展。开幕式最后，刘怡君教授致辞，阐述了社会物理学发展脉络与未来趋势。作为国际前沿交叉研究领域，社会物理学方向具有重大学科发展意义，将显著提升新时代社会科学位势。
