更新2024研讨会图片

--- a/source/_posts/events/ISSS/ISSS2024.md
+++ b/source/_posts/events/ISSS/ISSS2024.md
@@ -3,8 +3,8 @@ date: 2024-08-11 15:15:01
 title: "2024年社会仿真模拟国际研讨会"
 categories:
 - [events, ISSS, 2024]
-#thumbnail_in_body: https://wp-img.daozhao.com/fitconverter/isss_2024.png
-#banner: https://wp-img.daozhao.com/fitconverter/isss_2024.png
+thumbnail_in_body: /img/isss/isss_2024.png
+banner: /img/isss/isss_2024.png
 ---
 <h3 class="post_flex_center_center _excerpt_ignore">International Symposium on Social Simulation 2024</h3>
 <h3 class="post_flex_center_center _excerpt_ignore">The 2nd Asian Social Simulation Association Annual Conference</h3>
