--- a/source/_posts/events/ISSS/ISSS2024.md
+++ b/source/_posts/events/ISSS/ISSS2024.md
@@ -6,16 +6,17 @@ categories:
 thumbnail_in_body: /img/isss/isss_2024.png
 banner: /img/isss/isss_2024.png
 ---
-<h3 class="post_flex_center_center _excerpt_ignore">International Symposium on Social Simulation 2024</h3>
 <h3 class="post_flex_center_center _excerpt_ignore">The 2nd Asian Social Simulation Association Annual Conference</h3>
-<h3 class="post_flex_center_center _excerpt_ignore">Agenda</h3>
+<h3 class="post_flex_center_center _excerpt_ignore">International Symposium on Social Simulation 2024</h3>
+<h3 class="post_flex_center_center _excerpt_ignore">Call for Papers</h3>
 
-In the wave of rapid development of artificial intelligence technology and the transformation of societal intelligence transformation, agent-based simulation, as a key tool to explore complex social phenomena and dynamics, represents a new paradigm of scientific research. The 2024 International Symposium on Social Simulation (ISSS) will focus on the frontier advancement in the field of agent-based simulation, particularly large-scale social simulator:“AI Society”. The symposium aims to explore innovative applications of agent technology, the precise construction of simulation models, the potential and limitations of simulator devices in addressing challenges across various social scenarios, and the new modes of governance in an intelligent society where humans, robots, and objects coexist. Through in-depth communication at the symposium, we hope to inspire new research ideas, promote interdisciplinary collaboration, drive the continuous progress of agent-based simulation and large-scale social simulator technology, and provide robust support for solving complex real-world problems.
+#### 1. Background and Theme
+In the wave of rapid development of artificial intelligence technology and the transformation of societal intelligence transformation, agent-based simulation, as a key tool to explore complex social phenomena and dynamics, represents a new paradigm of scientific research. The 2nd Asian Social Simulation Association (ASSA) Annual Conference and the International Symposium on Social Simulation (ISSS) 2024 will be held on August 24 at the PKU-Wuhan Institute for Artificial Intelligence. The symposium will focus on the frontier advancement in the field of agent-based simulation, particularly large-scale social simulator: “AI Society”, and aims to explore innovative applications of agent technology, the precise construction of simulation models, the potential and limitations of simulator devices in addressing challenges across various social scenarios, and the new modes of governance in an intelligent society where humans, robots, and objects coexist. Through in-depth communication at the symposium, we hope to inspire new research ideas, promote interdisciplinary collaboration, drive the continuous progress of agent-based simulation and large-scale social simulator technology, and provide robust support for solving complex real-world problems.
 
 ISSS is currently the only international academic conference on social simulation initiated and hosted by Chinese institutions. It aims to provide a platform for global scholars engaged in social simulation and related research to interact and exchange ideas, thereby promoting the application of simulation research paradigms in the social sciences. The theme of ISSS 2024 is "Agent-Based Simulation and Advancements in Large-Scale Social Simulators", now calling for papers on "Multi-Scale Agent Model Construction and Application", "Equivalent Communities and Social Simulators" and so on. We look forward to the gathering of scholars in Wuhan Optics Valley to share and discuss the latest research results and jointly promote the innovative development of social simulation.
 
 
-#### 1. Scope and Interests
+#### 2. Scope and Interests
 The topics of interest include, but are not limited to:
 1. Multi-scale Agent Model Construction and Application
 2. Equivalent Communities and Social Simulators
@@ -31,20 +32,15 @@ The topics of interest include, but are not limited to:
 12. Social Network and Group Behavior Studies
 
 
-#### 2. Important Dates
-16 August 2024: Deadline for full paper or extended abstract (2-3 pages) submission
-18 August 2024: Notification of acceptance
-19 August 2024: Online registration open
-23 August 2024: On-site check-in
-24 August 2024: ISSS 2024 sessions
+#### 3. Important Dates
+18 August 2024: Deadline for full paper, extended abstract (2-3 pages) or PPT submission
+20 August 2024: Notification of acceptance
+21 August 2024: Online registration open
+24 August 2024: On-site check-in and ISSS 2024 sessions
 
-#### 3. Submission Guidelines
-Authors are invited to submit the full paper or extended abstract to ISSS 2024 via the Email: ISSS@socialsimulation.net.
-Please use “ISSS2024_ paper title” as the email subject of your submission.
-
-#### 4. ISSS Best Paper Prize
-We will award Best Paper Prizes to a number of best student papers presented at ISSS 2024. All student first authors are eligible for the Prize. Authors who graduated within the last 6 months and are no longer students are also eligible if the work being presented was conducted entirely while the first author was a student.
-To apply for the Prize, please indicate “running for ISSS Best Paper Prize” in your submission email.
+#### 4. Submission Guidelines
+Authors are invited to submit the full paper, extended abstract or PPT to ISSS 2024 via the Email: ISSS@socialsimulation.net.
+Please use “ASSA2024_ paper title” as the email subject of your submission.
 
 #### 5. Publication Options
 Selected outstanding papers will be invited to submit the full paper to the following journals:
@@ -56,116 +52,207 @@ https://www.springer.com/journal/11403
 
 #### 6. Keynote Speakers (updating)
 
-1. Prof. Gary Tan (National University of Singapore, Singapore)
+1. Prof. Song-Chun ZHU (Peking University, China)
+   https://cis.pku.edu.cn/info/1022/2211.htm
+
+2. Prof. Yanjie Bian (Xi'an Jiaotong University, China)
+   https://www.xjtu.edu.cn/jsnr.jsp?urltype=tree.TreeTempUrl&wbtreeid=1632&wbwbxjtuteacherid=374
+
+3. Prof. Gary Tan (National University of Singapore, Singapore)
    https://www.comp.nus.edu.sg/cs/people/gtan/
 
-2. Dr. Koen von Damo (Imperial College London, The UK)
+4. Dr. Koen von Damo (Imperial College London, The UK)
    https://profiles.imperial.ac.uk/k.van-dam
 
-3. Dr. Alvaro Orsi (Institute of Environmental Science and Research, New Zealand)
+5. Dr. Alvaro Orsi (Institute of Environmental Science and Research, New Zealand)
    https://www.esr.cri.nz/staff-profiles/alvaro-orsi/
 
-4. Prof. Xiao Xue (Tianjin University, China)
+6. Dr. Shuang Chang（Fujitsu Research, Japan）
+   https://jp.linkedin.com/in/%E7%88%BD-%E5%B8%B8-515b15319/en
+
+7. Dr. Serge Stinckwich（United Nations University Institute in Macau，Macao, China）
+   https://unu.edu/macau/about/expert/serge-stinckwich
+
+8. Prof. Xiao Xue (Tianjin University, China)
    https://cic.tju.edu.cn/faculty/xuexiao/index.html
 
-5. Dr. Yen-sheng Chiang (Institute of Sociology, Academia Sinica, Taiwan, China)
+9. Dr. Yen-sheng Chiang (Institute of Sociology, Academia Sinica, Taiwan, China)
    https://www.ios.sinica.edu.tw/fellow/yschiang
 
-6. Dr. Zhanli (Jerry) Sun (Leibniz Institute of Agricultural Development in Transition Economies, Germany)
-   https://www.iamo.de/en/institute/staff/details/sun/
+10. Dr. Zhanli (Jerry) Sun (Leibniz Institute of Agricultural Development in Transition Economies, Germany)
+    https://www.iamo.de/en/institute/staff/details/sun/
 
-7. Prof. Hang Xiong (Huazhong Agricultural University, China)
-   http://mari.hzau.edu.cn/people/people/Xiong_Hang.htm
+11. Prof. Yong Li (Tsinghua University, China)
+    http://people.ee.tsinghua.edu.cn/info/1144/1852.htm
 
-8. Prof. Peng Lu (Central South University, PKU-Wuhan Institute for Artificial Intelligence, China)
-   http://faculty.csu.edu.cn/lvpeng/zh_CN/index/44744/list/index.htm
+12. Prof. Tao Jia (Southwest University, China)
+    http://cis.swu.edu.cn/info/1185/4098.htm
 
-9. Prof. Yue Dou (University of Twente, The Netherlands)
-   https://people.utwente.nl/yue.dou
+13. Prof. Yue Dou (University of Twente, The Netherlands)
+    https://people.utwente.nl/yue.dou
 
+14. Prof. Nan Zhang（Tsinghua University, China）
+    https://www.sppm.tsinghua.edu.cn/info/1221/7540.htm
+
+15. Prof. Tun Lu (Fudan University, China)
+    https://cscw.fudan.edu.cn/5d/47/c31073a351559/page.htm
+
+16. Dr. Mingjie Lu (Zhejiang Lab, China)
+
+17. Prof. Hang Xiong (Huazhong Agricultural University, China)
+    http://mari.hzau.edu.cn/people/people/Xiong_Hang.htm
+
+18. Prof. Peng Lu (Central South University, PKU-Wuhan Institute for Artificial Intelligence, China)
+    http://faculty.csu.edu.cn/lvpeng/zh_CN/index/44744/list/index.htm
 
 #### 7. Organizers
 PKU-Wuhan Institute for Artificial Intelligence
 Asian Social Simulation Association
 
 
-<h3 class="post_flex_center_center _excerpt_ignore">2024年社会仿真模拟国际研讨会</h3>
-<h3 class="post_flex_center_center _excerpt_ignore">亚洲社会仿真学会第二届学术年会</h3>
-<h3 class="post_flex_center_center _excerpt_ignore">议  程</h3>
 
-在人工智能技术飞速发展与社会智能化转型的浪潮中，智能体仿真模拟作为探索复杂社会现象和动态的关键工具，代表了一种新的科学研究范式。2024年社会仿真模拟国际研讨会(International Symposium on Social Simulation，ISSS)将聚焦于智能体仿真模拟研究领域的前沿进展——大型社会模拟器，旨在共同探讨智能体技术的创新应用、仿真模型的精准构建、模拟器装置在应对社会不同场景挑战中的潜力与局限，以及人、机、物共存的智能社会治理的新模式。通过研讨会的深入交流，我们期待激发新的研究灵感，促进不同领域的跨学科合作，推动智能体仿真模拟与大型社会模拟器技术的持续进步，为解决现实世界中的复杂问题提供有力支持。
+<h3 class="post_flex_center_center _excerpt_ignore" style="margin-top: 36px;">亚洲社会仿真学会第二届学术年会</h3>
+<h3 class="post_flex_center_center _excerpt_ignore">暨2024年社会仿真模拟国际研讨会</h3>
+<h3 class="post_flex_center_center _excerpt_ignore">征文通知</h3>
 
-社会仿真模拟国际研讨会(ISSS)是目前唯一由中国机构发起主办的社会仿真主题国际学术会议，旨在为从事社会仿真模拟以及相关研究的国内外学者提供一个互动交流的平台，共同推动仿真研究范式在社会科学中的应用。本届ISSS主题为“智能体仿真模拟与大型社会模拟器进展”，现就“多尺度智能体模型构建与应用”、“等价共同体与社会模拟器”等议题开展会议征文。期待各位学者相聚武汉光谷，分享和探讨最新研究成果，共同推动社会仿真模拟领域研究的创新发展。
+#### 一、会议背景与会议主题
+<div class="post_textIntend2">
+在人工智能技术飞速发展与社会智能化转型的浪潮中，智能体仿真模拟作为探索复杂社会现象和动态的关键工具，代表了一种新的科学研究范式。亚洲社会仿真学会（Asian Social Simulation Association，ASSA）第二届学术年会暨2024年社会仿真模拟国际研讨会(International Symposium on Social Simulation，ISSS)即将于8月24日在北京大学武汉人工智能研究院举办。本届会议将聚焦于智能体仿真模拟研究领域的前沿进展——大型社会模拟器，旨在共同探讨智能体技术的创新应用、仿真模型的精准构建、模拟器装置在应对社会不同场景挑战中的潜力与局限，以及人、机、物共存的智能社会治理的新模式。通过会议的深入交流，我们期待激发学者们新的研究灵感，促进不同领域的跨学科合作，推动智能体仿真模拟与大型社会模拟器技术的持续进步，为解决现实世界中的复杂问题提供有力支持。
+</div>
 
+<div class="post_textIntend2">
+社会仿真模拟国际研讨会(ISSS)是目前唯一由中国机构发起主办的社会仿真模拟主题的国际学术会议，旨在为从事社会仿真模拟以及相关研究的国内外学者提供一个互动交流的平台，共同推动仿真研究范式在社会科学中的应用。本届会议主题为“智能体仿真模拟与大型社会模拟器进展”，现就“多尺度智能体模型构建与应用”、“等价共同体与社会模拟器”等议题开展会议征文。期待各位学者一起相聚武汉光谷，分享和探讨最新研究成果，共同推动社会仿真模拟领域研究的创新发展。
+</div>
 
-#### 1. 议题范围
-ISSS 2024面向以下主题征文，具体议题包括但不限于：
-1.  多尺度智能体模型构建与应用
-2.  等价共同体与社会模拟器
-3.  公共政策仿真模拟与评估
-4.  公共安全与社会脆弱性分析
-5.  社会地理与城市计算
-6.  大模型与计算社会科学
-7.  历史动力学与文明演化
-8.  社会智能系统决策与优化
-9.  人机融合的复杂社会系统
-10. 智慧城市与数字社会
-11. 超大城市韧性治理
-12. 社会网络与群体行为研究
+<div class="p_center">
+    <img class="post_block-item" style="max-width: 80%;margin-bottom: 16px;" src="/img/isss/isss_2024_1.png">
+</div>
 
+#### 二、议题征集范围（包括但不限于）
+<div class="post_textIntend2">
+    <div class="post_listIntend2" data-num="1. ">
+        多尺度智能体模型构建与应用
+    </div>
+    <div class="post_listIntend2" data-num="2. ">
+        等价共同体与社会模拟器
+    </div>
+    <div class="post_listIntend2" data-num="3. ">
+        公共政策仿真模拟与评估
+    </div>
+    <div class="post_listIntend2" data-num="4. ">
+        公共安全与社会脆弱性分析
+    </div>
+    <div class="post_listIntend2" data-num="5. ">
+        社会地理与城市计算
+    </div>
+    <div class="post_listIntend2" data-num="6. ">
+        大模型与计算社会科学
+    </div>
+    <div class="post_listIntend2" data-num="7. ">
+        历史动力学与文明演化
+    </div>
+    <div class="post_listIntend2" data-num="8. ">
+        社会智能系统决策与优化
+    </div>
+    <div class="post_listIntend2" data-num="9. ">
+        人机融合的复杂社会系统
+    </div>
+    <div class="post_listIntend2" data-num="10. ">
+        智慧城市与数字社会
+    </div>
+    <div class="post_listIntend2" data-num="11. ">
+        超大城市韧性治理
+    </div>
+    <div class="post_listIntend2" data-num="12. ">
+        社会网络与群体行为研究
+    </div>
+</div>
 
-#### 2. 重要日期
-8月16日：论文全文、长摘要（2-3页）提交截止
-8月18日：论文全文和长摘要接收通知
-8月19日：线上注册启动
-8月23日：现场报到
-8月24日：研讨会报告
+#### 三、重要日期
+8月18日：论文全文、长摘要（2-3页）或演讲PPT提交截止
+8月20日：主办方发送录用通知
+8月21日：线上注册启动
+8月24日：现场报到、会议开幕
 
-#### 3. 文稿提交
-请作者通过电子邮件向ISSS 2024提交论文全文或扩展摘要：ISSS@socialsimulation.net.
-请使用“ISSS2024_ paper title”作为你提交的电子邮件的主题。
+#### 四、文稿提交
+<div class="post_textIntend2">
+请作者通过电子邮件向ASSA/ISSS 2024提交论文全文、长摘要或演讲PPT：ISSS@socialsimulation.net.
+</div>
+<div class="post_textIntend2">
+请使用“ASSA2024_paper title”作为你提交的电子邮件的主题。
+</div>
 
-#### 4. ISSS最佳论文奖
-我们将向在ISSS 2024报告的学生第一作者论文中评选出若干篇最佳论文，并向第一作者学生颁发“ISSS最佳论文奖”。对于过去6个月内毕业的学生第一作者，如果所报告的论文是其在学生时期完成的，也有有资格参评。如有意该奖项，请在投稿邮件中注明“running for ISSS Best Paper Prize”。
-
-
-#### 5. 支持期刊
+#### 五、支持期刊（更新中）
+<div class="post_textIntend2">
 入选的优秀论文有望被邀请进入以下支持期刊的快审通道：
+</div>
+
 Journal of Artificial Societies and Social Simulation (SSCI, IF=3.506)
 http://jasss.org/
 
 Journal of Economic Interaction and Coordination (SSCI, IF=1.40)
 http://www.springer.com/journal/11403
 
-#### 6. 主旨报告人(更新中)
-1. Prof.Gary Tan (新加坡国立大学，新加坡)
+<div class="p_center">
+    <img class="post_block-item" style="max-width: 80%;margin-bottom: 16px;" src="/img/isss/isss_2024_2.jpg">
+</div>
+
+#### 六、主旨报告人(更新中)
+1. 朱松纯教授（北京大学，中国）
+   https://cis.pku.edu.cn/info/1022/2211.htm
+
+2. 边燕杰教授（西安交通大学，中国）
+   https://www.xjtu.edu.cn/jsnr.jsp?urltype=tree.TreeTempUrl&wbtreeid=1632&wbwbxjtuteacherid=374
+
+3. Prof. Gary Tan (新加坡国立大学，新加坡)
    https://www.comp.nus.edu.sg/cs/people/gtan/
 
-2. Dr.Koen von Dam（帝国理工大学，英国）
+4. Dr. Koen von Dam（帝国理工大学，英国）
    https://profiles.imperial.ac.uk/k.van-dam
 
-3. Dr. Alvaro Orsi（环境科学研究所，新西兰）
+5. Dr. Alvaro Orsi（环境科学研究所，新西兰）
    https://www.esr.cri.nz/staff-profiles/alvaro-orsi/
-4. 薛霄教授（天津大学，中国）
+
+6. Dr. Shuang Chang（富士通研究所，日本）
+   https://jp.linkedin.com/in/%E7%88%BD-%E5%B8%B8-515b15319/en
+
+7. Dr. Serge Stinckwich（联合大学驻澳门研究所，中国澳门）
+   https://unu.edu/macau/about/expert/serge-stinckwich
+
+8. 薛霄教授（天津大学，中国）
    https://cic.tju.edu.cn/faculty/xuexiao/index.html
 
-5. 江彥生研究员（中央研究院社会学研究所，中国台湾）
+9. 江彥生研究员（中央研究院社会学研究所，中国台湾）
    https://www.ios.sinica.edu.tw/fellow/yschiang
 
-6. 孙战利研究员（莱布尼兹转型经济农业发展研究所，德国）
-   https://www.iamo.de/en/institute/staff/details/sun/
+10. 孙战利研究员（莱布尼兹转型经济农业发展研究所，德国）
+    https://www.iamo.de/en/institute/staff/details/sun/
 
-7. 熊航教授 (华中农业大学，中国)
-   http://mari.hzau.edu.cn/people/people/Xiong_Hang.htm
+11. 李勇教授（清华大学，中国）
+    http://people.ee.tsinghua.edu.cn/info/1144/1852.htm
 
-8. 吕鹏教授 (中南大学、北京大学武汉人工智能研究院，中国)
-   http://faculty.csu.edu.cn/lvpeng/zh_CN/index/44744/list/index.htm
+12. 贾韬教授（西南大学，中国）
+    http://cis.swu.edu.cn/info/1185/4098.htm
 
-9. 窦玥教授（特温特大学，荷兰）
-   https://people.utwente.nl/yue.dou
+13. 张楠教授（清华大学，中国）
+    https://www.sppm.tsinghua.edu.cn/info/1221/7540.htm
+
+14. 窦玥教授（特温特大学，荷兰）
+    https://people.utwente.nl/yue.dou
+
+15．卢暾教授（复旦大学，中国）
+https://cscw.fudan.edu.cn/5d/47/c31073a351559/page.htm
+
+16. 吕明杰博士（之江实验室, 中国）
+
+17. 熊航教授 (华中农业大学，中国)
+    http://mari.hzau.edu.cn/people/people/Xiong_Hang.htm
+
+18. 吕鹏教授 (中南大学、北京大学武汉人工智能研究院，中国)
+    http://faculty.csu.edu.cn/lvpeng/zh_CN/index/44744/list/index.htm
 
 
-#### 7. 主办单位
+#### 七、举办单位
 北京大学武汉人工智能研究院
 亚洲社会仿真学会
 
